--- a/views/addaddress.ejs
+++ b/views/addaddress.ejs
@@ -6,10 +6,11 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        <link href='https://fonts.googleapis.com/css?family=Baloo Tamma' rel='stylesheet'>
         <style>
             body
             {
-                font-size: 20px;
+                font-family: 'Baloo Tamma';font-size: 22px;
             }
             input
             {
@@ -33,7 +34,7 @@
     <body>
         <center style="top:50%; left:50%; transform:translate(-50%,-50%); position:absolute;">
             <form action='/add/address' method="POST">
-                ADD ADDRESS
+                <p style="font-size: 40px;">ADD ADDRESS</p>
                 <br>
                 <input name="name" type="text" placeholder="NAME">
                 <br>
