--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,12 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        <link href='https://fonts.googleapis.com/css?family=Baloo Tamma' rel='stylesheet'>
         <style>
+            body
+            {
+                font-family: 'Baloo Tamma';font-size: 22px;
+            }
             #nav
             {
                 width: 100%;
