--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,16 +6,20 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        <link href='https://fonts.googleapis.com/css?family=Baloo Tamma' rel='stylesheet'>
         <style>
             body
             {
-                font-size: 20px;
+                font-family: 'Baloo Tamma';font-size: 22px;
             }
             input
             {
                 margin-top: 15px;
                 border-radius: 10px;
-                border: 2px solid black; 
+                border: 2px solid black;
+                font-size: 20px;
+                width: 320px;
+                height: 40px;
             }
             button
             {
@@ -27,15 +31,15 @@
     <body>
         <center style="top:50%; left:50%; transform:translate(-50%,-50%); position:absolute;">
             <form action='/login' method="POST">
-                LogIn
-                <br>
+                <p style="font-size: 40px;">LogIn</p>
                 <input name="email" type="email" placeholder="EMAIL">
                 <br>
                 <input name="password" type="password" placeholder="PASSWORD">
                 <br>
                 <button type="submit" class="btn-success">LogIn</button>
                 <br>
-                <p style="font-size: 15px;">Not Registered? SignUp</p>
+                <br>
+                <p style="font-size: 15px;">Not Registered? <a href="/register">SignUp</a></p>
             </form>
         </center>
     </body>
