--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,18 +6,19 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        <link href='https://fonts.googleapis.com/css?family=Baloo Tamma' rel='stylesheet'>
         <style>
             body
             {
-                font-size: 20px;
+                font-family: 'Baloo Tamma';font-size: 22px;
             }
             input
             {
                 margin-top: 15px;
                 border-radius: 10px;
                 border: 2px solid black;
-                font-size: 14px; 
-                width: 240px;
+                font-size: 20px; 
+                width: 320px;
                 height: 40px;
             }
             button
@@ -30,7 +31,7 @@
     <body>
         <center style="top:50%; left:50%; transform:translate(-50%,-50%); position:absolute;">
             <form action='/register' method="POST">
-                REGISTER
+                <p style="font-size: 40px;">Register</p>
                 <br>
                 <input name="name" type="text" placeholder="NAME">
                 <br>
@@ -41,8 +42,8 @@
                 <input id="pass" name="password" type="password" placeholder="PASSWORD">
                 <br>
                 <button type="submit" onclick="return validate()" class="btn-success">Register</button>
-                <br>
-                <p style="font-size: 15px;">Already Registered? LogIn</p>
+                <br><br>
+                <p style="font-size: 15px;">Already Registered? <a href="/login">LogIn</a></p>
             </form>
         </center>
         <script>
